<?xml version="1.0" encoding="utf-8"?>
<!-- activity_switch.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/mainActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_mainactivity"
        android:onClick="goToMainActivity" />

    <Button
        android:id="@+id/temperatureActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_temperatureactivity"
        android:onClick="goToTemperatureActivity" />
    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:onClick="logout" />
</LinearLayout>
