<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"
        />
    <item
        android:id="@+id/notification"
        android:title="@string/notification"
        android:icon="@drawable/notifications40px"
        />
    <item
        android:id="@+id/add_new_task"
        android:title="@string/add_new_task"
        android:icon="@drawable/baseline_alarm_24"
        />
<!--    <item-->
<!--        android:id="@+id/notes"-->
<!--        android:title="@string/notes"-->
<!--        app:showAsAction="ifRoom"-->
<!--        android:icon="@drawable/baseline_notes_24"-->
<!--        />-->
<!--    <item-->
<!--        android:id="@+id/settings"-->
<!--        app:showAsAction="ifRoom"-->
<!--        android:title="@string/settings"-->
<!--        android:icon="@drawable/baseline_settings_24"-->
<!--        />-->
</menu>