<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />
    <RelativeLayout
        android:id="@+id/item_visibility"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        >
        <ImageView
            android:id="@+id/image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/img"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginHorizontal="10dp"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            android:layout_below="@id/image"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:hint="@string/email"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_below="@id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginHorizontal="10dp"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:id="@+id/forgot_your_password"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="5dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/layout_password"
            />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_below="@id/forgot_your_password"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="15dp"
            />
        <ImageButton
            android:id="@+id/btn_show_password"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/visibility"
            android:background="@color/white"
            android:layout_below="@id/layout_email"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="15dp"
            />
        <ImageButton
            android:id="@+id/btn_hide_password"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/visibility_off"
            android:background="@color/white"
            android:layout_below="@id/layout_email"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="15dp"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/generatePdfButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Generate PDF"
            android:layout_toEndOf="@+id/btn_hide_password"
            />
        <Button
            android:id="@+id/generateHtmlPdfButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Generate html PDF"
            android:layout_toEndOf="@+id/generatePdfButton"
            />

    </RelativeLayout>

</RelativeLayout>

